remove cruft